2014-08-05  Ramon Casero  <rcasero@gmail.com>

	* Move matlab/PointsToolbox/surface_interp.m to
	matlab/ManifoldToolbox/surface_interp.m.
	* Move matlab/PointsToolbox/surface_param.m to
	matlab/ManifoldToolbox/surface_param.m.

	- To group them with surface_tridomain(), and highlight that these
	are manifold functions.

	* Add matlab/PointsToolbox/surface_interp.m: (0.0.1)
	* Delete matlab/PointsToolbox/surface_interpolation.m:

	- SURFACE_INTERP Interpolate an open or closed surface from a
	parametrized scattered set of points.

	- Cannibalize old surface_interpolation() to make more modular,
	leaner functions. We already added surface_param(), that took the
	parametrization block. Now, surface_interp() takes the
	interpolation methods themselves. Another function,
	surface_domain() will provide the sampling of the surface domain.

	- surface_interp() is still in alpha, because I have tested it
	only with spherical interpolation. I added a warning for the user.

2014-08-04  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/surface_param.m: (0.6.1)

	- Some missing and wrong info in help header. Move CALD after
	smdscale.

2014-07-26  Ramon Casero  <rcasero@gmail.com>

	* matlab/CMakeLists.txt: (0.3.1)
	* Add matlab/FileFormatToolbox/CMakeLists.txt: (0.1.1)

	- We want to compile Matlab function vmu2png.m into a binary that
	we can run from the command line.

2014-07-24  Ramon Casero  <rcasero@gmail.com>

	* matlab/FileFormatToolbox/vmu2png.m (0.2.1)

	- Save 'PixelHeight' and 'PixelWidth' as an "Other" field in the
	PNG image. Although these can be computed from
	e.g. 'PhysicalHeight'and 'YResolution', in case of round-off
	errors we want to have the original value from the microscope too.

	- Fix bug. When path to file was empty (i.e. file is in current
	directory), the function tried to save the PNG to the filesystem's
	root directory '/'.

2014-07-23  Ramon Casero  <rcasero@gmail.com>

	* CMakeLists.txt: (0.9.2)
